@@ -1,3 +1,13 @@
+16/06/10 - build 200
+
+-- continued porting of dce_rpc - smb transaction processing
+-- tweaked autotools build foo
+-- add / update unit tests
+-- fix additional memory leaks
+-- fix compiler warnings
+-- fix static analysis issues
+-- fix handling of bpf file failures
+
 16/06/03 - build 199
 
 -- add new http_inspect alerts abusive content-length and transfer-encodings
